integration_tests/codegen_fail/fail/union/enum_non_object_variant.stderr
error[E0277]: the trait bound `Test: GraphQLObject<__S>` is not satisfied
  --> fail/union/enum_non_object_variant.rs:9:10
   |
9  | #[derive(GraphQLUnion)]
   |          ^^^^^^^^^^^^ the trait `GraphQLObject<__S>` is not implemented for `Test`
   |
note: required by `juniper::GraphQLObject::mark`
  --> $WORKSPACE/juniper/src/types/marker.rs
   |
   |     fn mark() {}
   |     ^^^^^^^^^
   = note: this error originates in the derive macro `GraphQLUnion` (in Nightly builds, run with -Z macro-backtrace for more info)
